Изменил разметку свайпера карт в профиле

--- a/css/style.css
+++ b/css/style.css
@@ -934,6 +934,7 @@ body[data-screen="profile"] .profile-screen {
 }
 .profile-cards {
     margin-top: 11px;
+    padding: 0 60px;
     width: 100%;
 }
 .profile-card {
